--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
-        "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.0"
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "classmap": [
