--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-API_URL_FLIGHTS=http://prova.123milhas.net/api/flights
+API_URL_FLIGHTS=http://localhost/api/flights
